Apply changes to corrections modal
Treat the corrections modal as a stats modal, and have it appear above
the stats modal and behave in the same way.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -734,6 +734,7 @@ canvas#large_clock {
 
 .stats-window {
   display: none;
+  padding-bottom: 5px;
   width: 100%;
 }
 
